Ридми, лицензия и фиксы

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="code/style.min.css">
 </head><body>
 	<div class="container">
+			<h1>Back Instagram old logo</h1>
 			<hr>
 			<p>Menu &#10141; Add to Home Screen</p>
 	</div>
